<resources>
    <string name="app_name">EHR</string><string name="attempts">Attempts Left:</string><string name="action_settings">Settings</string><string name="alcohol_use">Alcohol Use</string><string name="assessment_and_plan">Assessment and Plan</string><string name="add_allergy">Add Allergy</string><string name="age">Age</string><string name="allergy">Allergy</string><string name="body_temperature">Body Temp (Deg Celsius)</string><string name="BMI">BMI</string><string name="bpm">Pulse - BPM</string><string name="ConfirmPassword">Confirm Password</string><string name="capital_off">Female</string><string name="capital_on">Male</string><string name="create_new_account">Create New Account</string><string name="country">Country</string><string name="click_to_edit">Click to Edit</string><string name="cancel">Cancel</string><string name="chief_complaint">Chief Complaint</string><string name="consultation_report">Consultation Report</string><string name="coffee_consumption">Coffee Consumption</string><string name="dummy_section_text">Section %1d is just a dummy section.</string><string name="demo_external_activity">Demo External Activity</string><string name="demo_collection">Demo Collection</string><string name="date_of_birth">Date of Birth</string><string name="drug_use">Drug Use</string><string name="diagnostic_findings">Diagnostic Findings</string><string name="diastolic_blood_pressure">Diastolic Blood Pressure</string><string name="duration_of_symptom">Duration of Symptom</string><string name="date">Date</string><string name="date_last_occurred">Date Last Occurred</string><string name="dob">mm/dd/yyyy</string><string name="edit">edit</string><string name="firstname">First Name</string><string name="gender">Gender</string><string name="height">Height (cm)</string><string name="hello_world">Electronic Health Record!</string><string name="interpretation">Interpretation</string><string name="Immunization">Immunization/Vaccines</string><string name="identified_on_cloud">Not Identified on Cloud</string><string name="Login">LOGIN</string><string name="list">list</string><string name="lastname">Last Name</string><string name="menu_settings">Settings</string><string name="medium_text">Medium Text</string><string name="medication">Medication</string><string name="marital_status">Marital Status</string><string name="or">OR</string><string name="otc">OTC Treatment</string><string name="occupation">Occupation</string><string name="onset_of_symptom">Onset of Symptom</string><string name="password">Password</string>
    <string name="profilename">Profile Name</string><string name="profile_info">Profile Info</string><string name="physician_info">Physician Info</string><string name="physician_name">Name</string><string name="physician_organization">Organization</string><string name="age_administered">Age Administered</string><string name="procedure_history">Procedure History</string><string-array name="races_array">
        <item>click to select</item>
        <item>African American</item>
        <item>Asian</item>
        <item>Caucasian</item>
        <item>Latin or Hispanic</item>
        <item>Native American</item>
        <item>Middle Eastern</item>
    </string-array><string name="race">Race</string><string name="recovery">Recovery</string><string name="reminder">Reminder...Reminder...Reminder...</string><string name="review_of_body_systems">Review of Body Systems</string><string name="respiratory_rate">Respiratory Rate</string><string name="reaction">Reaction</string><string name="result">Result/Finding</string><string name="SecurityQ">Security Question</string><string name="SecurityA">Security Answer</string><string name="save">save</string><string name="setting">setting</string><string name="systolic_blood_pressure">Systolic Blood Pressure</string><string name="severity">Severity</string><string name="social_history">Social History</string><string name="symptom">Symptom</string><string name="treatment">Treatment</string><string name="title_activity_page_view">EHR</string><string name="tobacco_use">Tobacco Use</string>

    
    
    
	<string name="type">Type</string><string name="test">Test</string><string name="username">Username</string>
  	
  	
  	
  	
  	
  	
  	 
    

    
    
    
    
    
    
    
    
    
    
    
    <string name="using_cloud">Use Cloud</string><string name="vital_signs">Vital Signs</string>
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    <string name="vaccine">Vaccine</string><string name="weight">Weight (kg)</string>
    
    <string name="dose">Dose</string>
    
    <string name="date_administered">Date Administered</string>
    <string name="lot_number">Lot Number</string>
    <string name="immunization">Immunization/</string>
    <string name="vaccines">Vaccines</string>
    <string name="dosage">Dosage</string>
    <string name="frequency">Frequency</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="drug">Drug</string>
    <string name="procedure">Procedure</string>
    <string name="physician">Physician</string>
    <string name="institution_location">Institution/Location</string>
    <string name="Result">Result</string>
    <string name="skin">Skin</string>
    <string name="head">Head</string>
    <string name="vision">Vision</string>
    <string name="hearing">Hearing</string>
    <string name="nose">Nose</string>
    <string name="mouth">Mouth</string>
    <string name="neck">Neck</string>
    <string name="chest">Chest</string>
    <string name="respiratory">Respiratory</string>
    <string name="cardiovascular">Cardiovascular</string>
    <string name="gastrointestinal">Gastrointestinal</string>
    <string name="gynecologic">Gynecologic</string>
    <string name="musculoskeletal">Musculoskeletal</string>
    <string name="peripheral_vascular">Vascular</string>
    <string name="neurologic">Neurologic</string>
    <string name="hematologic">Hematologic</string>
    <string name="endocrine">Endocrine</string>
    <string name="psychiatric">Psychiatric</string>
    <string name="urological">Urological</string>
    <string name="create_body_review">Create Body Review</string>
    <string name="family_history">Family History</string>
    <string name="textview">TextView</string>
    <string name="text">Date: Type, Reaction, Severity, Date last occurred, Treatment</string>
    <string name="vital_signs_text">Date: Pulse, Respiratory rate, Systolic blood pressure, Diastolic blood pressure, Body temp, Height, Weight, BMI</string>
    <string name="button">Button</string>
    <string name="about">About</string>
    <string name="new_family_history">Family History</string>
    <string name="relation">Relation</string>
    <string name="choose_condition">Choose Conditions That Apply:</string>
    <string name="name">Name</string>
    <string name="depression">Depression</string>
    <string name="bipolar">Bipolar</string>
    <string name="anxiety">Anxiety</string>
    <string name="alzheimer">Alzheimer</string>
    <string name="learning_disorders">Learning Disorders</string>
    <string name="ADHD">ADHD</string>
    <string name="alcohol_substance_abuse">Alcohol/Substance Abuse</string>
    <string name="cancer">Cancer </string>
    <string name="patient_history">Patient History</string>
    <string name="history_of_present_illness">History of Present Illness</string>
    <string name="present_illness_text">Date: Symptom, Duration, OTC, Treatment</string>
    <string name="family_history_text">Name, Relation, Symptoms</string>
    <string name="immunization_text">Date: Vaccine, Type, Dose, Age administered, Date administered, Lot number</string>
    <string name="procedure_history_text">Date: Procedure, Physician, Institution/Location, Result</string>
    <string name="diagnostic_findings_text">Date: Test, Result/finding, Interpretation</string>
    <string name="review_of_body_system_text">Skin, head, eyes, ears, nose, mouth, neck, chest, respiratory, cardiac, gastrointestinal, gynecologic, Musculoskeletal, peripheral vascular, neurologic, hematologic, endocrine, psychiatric</string>
    <string name="social_history_text">Date: Marital status, Occupation, Coffee consumption, Tobacco use, Alcohol use, Drug use</string>
    <string name="allergies_text">Date: Type, Reaction, Severity, Date last occurred, Treatment</string>
    <string name="allergies">Allergies</string>
    <string name="medication_text">Date: Drug, Dosage, Frequency, Start date, Stop date</string>
    <string name="date_value">dateValue</string>
    <string name="section_logs">Section Logs</string>
    <string name="other">Other</string>
    <string name="this_is_fragment_no2">This is fragment No.2</string>
    <string name="cardiac">Cardiac</string>
    <string name="ears">Ears</string>
    <string name="eyes">Eyes</string>
    <string name="version_1">Version 1.0</string>
    <string name="ori_ver_of_app">Original Version of App</string>
    <string name="possible_feature">Future Possible Features:</string>
    <string name="web_tracker">Web Tracker</string>
    <string name="family_history_tracker">Family History Tracker</string>
    <string name="vaccine_tracker">Vaccine Tracker</string>
    <string name="consultation_report_pic_tracker">Consultation Report Picture Tracker</string>
    
    
    
    
    
    
    
    
    
    
    
    
    
   
    <string name="small_screen_size">Small Screen Size Layout</string>
    <string name="normal_screen_size">Normal Screen Size Layout</string>
    <string name="large_screen_size">Large Screen Size Layout</string>
    <string name="xlarge_screen_size">Extra Large Screen Size Layout</string>
    <string name="main_layout">Main Layout</string>
    <string name="sw320">The smallest width of the screen is greater than or equal to 320dp</string>
    <string name="sw480">The smallest width of the screen is greater than or equal to 480dp</string>
    
    
    
    
    
    
    
</resources>