<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg4" >

    <RelativeLayout
        android:id="@+id/headRL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/bg_headbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:paddingTop="3dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_top" />

        <ImageButton
            android:id="@+id/allergiesAdd"
            android:layout_width="68dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/back_btn_selector" />

        <TextView
            android:id="@+id/CreateNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/recovery"
            android:textSize="25sp" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/infoBtn"
        android:layout_width="65dp"
        android:layout_height="35dp"
        android:layout_below="@+id/userName"
        android:layout_centerHorizontal="true"
        android:background="#00000000"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/login_button" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/firstName"
        android:layout_alignBottom="@+id/firstName"
        android:layout_toRightOf="@+id/origUN"
        android:background="@drawable/small_box"
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        android:paddingTop="3dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/origUN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/showDOB"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/or"
        android:textColor="#ffffffff"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/origUN"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@drawable/username"
        android:ellipsize="end"
        android:ems="10"
        android:imeOptions="actionDone"
        android:hint="@string/username"
        android:maxLength="10"
        android:paddingLeft="10dp"
        android:paddingTop="3dp"
        android:singleLine="true"
        android:textSize="18sp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/reminder"
        android:layout_width="275dp"
        android:layout_height="25dp"
        android:layout_below="@+id/infoBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:gravity="center_vertical|center_horizontal|center"
        android:text="@string/reminder"
        android:textColor="#ffffffff"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/submit2"
        android:layout_width="65dp"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/infoBtn"
        android:layout_below="@+id/securityAnswer"
        android:background="#00000000"
        android:contentDescription="@string/reminder"
        android:scaleType="fitCenter"
        android:src="@drawable/login_button" />

    <EditText
        android:id="@+id/securityAnswer"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/userName"
        android:layout_below="@+id/reminder"
        android:background="@drawable/username"
        android:ellipsize="end"
        android:ems="10"
        android:hint="@string/SecurityA"
        android:maxLength="10"
        android:paddingLeft="10dp"
        android:paddingTop="3dp"
        android:singleLine="true"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/showDOB"
        android:layout_alignLeft="@+id/firstName"
        android:text="@string/date_of_birth"
        android:textColor="#ffffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/showDOB"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastName"
        android:layout_marginTop="28dp"
        android:layout_toRightOf="@+id/firstName"
        android:background="@drawable/small_box"
        android:gravity="center_vertical|center_horizontal|center"
        android:text="@string/dob"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/primary_text_light" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/reminder"
        android:layout_below="@+id/headRL"
        android:layout_marginTop="20dp"
        android:background="@drawable/small_box"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        android:paddingTop="3dp"
        android:textSize="18sp" />

</RelativeLayout>