<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg4" >

    <RelativeLayout
        android:id="@+id/headRL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/bg_headbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:paddingTop="3dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_top" />

        <ImageButton
            android:id="@+id/saveButton"
            android:layout_width="68dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/plus_btn_selector" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/new_family_history"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/deleteBtn"
            android:layout_width="68dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/saveButton"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:contentDescription="@string/app_name"
            android:paddingTop="1dp"
            android:scaleType="fitCenter"
            android:src="@drawable/trash_btn_selector" />

        <ImageButton
            android:id="@+id/backBtn"
            android:contentDescription="@string/app_name"
            android:layout_width="68dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:scaleType="fitCenter"
            android:src="@drawable/back_btn_selector" />

    </RelativeLayout>

    <EditText
        android:id="@+id/relation_fam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name_fam"
        android:layout_below="@+id/name_fam"
        android:layout_centerHorizontal="true"
        android:background="@drawable/username"
        android:ellipsize="end"
        android:imeOptions="actionDone"
        android:ems="10"
        android:hint="@string/relation"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:singleLine="true" >
    </EditText>

    <TextView
        android:id="@+id/originalVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relation_fam"
        android:layout_below="@+id/relation_fam"
        android:layout_marginTop="16dp"
        android:text="@string/choose_condition" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false"
        android:layout_below="@+id/originalVersion" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:button="@drawable/check"
                android:gravity="start"
                android:paddingLeft="60dp"
                android:paddingTop="10dp"
                android:scaleX="0.70"
                android:scaleY="0.70"
                android:text="@string/depression"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:button="@drawable/check"
                android:gravity="start"
                android:paddingLeft="60dp"
                android:paddingTop="10dp"
                android:scaleX="0.70"
                android:scaleY="0.70"
                android:text="@string/bipolar"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:button="@drawable/check"
                android:gravity="start"
                android:paddingLeft="60dp"
                android:paddingTop="10dp"
                android:scaleX="0.70"
                android:scaleY="0.70"
                android:text="@string/anxiety"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:button="@drawable/check"
                android:gravity="start"
                android:paddingLeft="60dp"
                android:paddingTop="10dp"
                android:scaleX="0.70"
                android:scaleY="0.70"
                android:text="@string/alzheimer"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:button="@drawable/check"
                android:gravity="start"
                android:paddingLeft="60dp"
                android:paddingTop="10dp"
                android:scaleX="0.70"
                android:scaleY="0.70"
                android:text="@string/learning_disorders"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:button="@drawable/check"
                android:gravity="start"
                android:paddingLeft="60dp"
                android:paddingTop="10dp"
                android:scaleX="0.70"
                android:scaleY="0.70"
                android:text="@string/ADHD"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:button="@drawable/check"
                android:gravity="left|start"
                android:paddingLeft="60dp"
                android:paddingTop="10dp"
                android:scaleX="0.70"
                android:scaleY="0.70"
                android:text="@string/alcohol_substance_abuse"
                android:textSize="20sp" />

            <RelativeLayout
                android:id="@+id/relative"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right" >

                <CheckBox
                    android:id="@+id/checkBox8"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_alignParentLeft="true"
                    android:button="@drawable/check"
                    android:gravity="left|start"
                    android:paddingLeft="60dp"
                    android:paddingTop="10dp"
                    android:scaleX="0.70"
                    android:scaleY="0.70"
                    android:text="@string/cancer"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/small_box"
                    android:ems="10"
                    android:hint="@string/type"
                    android:paddingBottom="10dp"
                    android:singleLine="true"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:orientation="vertical" >

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <EditText
                android:id="@+id/otherText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/username"
                android:ems="10"
                android:hint="@string/other"
                android:singleLine="true"
                android:paddingLeft="10dp"
                android:paddingTop="5dp" />
        </LinearLayout>
    </ScrollView>

    <EditText
        android:id="@+id/name_fam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headRL"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/username"
        android:ellipsize="end"
        android:ems="10"
        android:hint="@string/name"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

</RelativeLayout>