<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal|center"
    android:background="@drawable/dark_gray_box"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingRight="5dp" >

    <Button
        android:id="@+id/close"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:background="@drawable/close_button" />

    <TextView
        android:id="@+id/FamilyHistoryTracker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#80000000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/origUN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:text="@string/medium_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffffff"
        android:textSize="30sp" />
 
<TextView
    android:id="@+id/CreateNewAccount"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal|center"
    android:paddingTop="8dp"
    android:text="@string/password"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:textColor="#80000000"
    android:textSize="30sp" />

<TextView
    android:id="@+id/origPW"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal|center"
    android:text="@string/medium_text"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:textColor="#ffffffff"
    android:textSize="30sp" />

<TextView
    android:id="@+id/version"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/textview"
    android:textColor="#464646"
    android:textSize="30sp" />
 
</LinearLayout>
